// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-beth successful calls return success when fetching the USD/BEth price 1`] = `
Object {
  "data": Object {
    "result": "25311438342229448966",
  },
  "jobRunID": "1",
  "result": "25311438342229448966",
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the BTC/BEth price 1`] = `
Object {
  "data": Object {
    "result": "966049077953291358",
  },
  "jobRunID": "1",
  "result": "966049077953291358",
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the ETH/BEth price 1`] = `
Object {
  "data": Object {
    "result": "966049077953291358",
  },
  "jobRunID": "1",
  "result": "966049077953291358",
  "statusCode": 200,
}
`;
